--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "halide-to-hardware"]
 	path = halide-to-hardware
 	url = ../../stanfordaha/halide-to-hardware.git
+[submodule "BufferMapping"]
+	path = BufferMapping
+	url = ../../joyliu37/BufferMapping
