--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,3 +3,7 @@ update_configs:
   - package_manager: "submodules"
     directory: "/"
     update_schedule: "daily"
+automerged_updates:
+  - match:
+    dependency_type: "all"
+    update_type: "all"
