--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,24 @@
 [submodule "coreir"]
 	path = coreir
-	url = ../../rdaly525/coreir.git
+	url = https://github.com/rdaly525/coreir
     branch = master
 [submodule "garnet"]
 	path = garnet
-	url = ../../stanfordaha/garnet.git
+	url = https://github.com/stanfordaha/garnet
     branch = master
 [submodule "halide-to-hardware"]
 	path = halide-to-hardware
-	url = ../../stanfordaha/halide-to-hardware.git
+	url = https://github.com/stanfordaha/halide-to-hardware
     branch = master
 [submodule "BufferMapping"]
 	path = BufferMapping
-	url = ../../joyliu37/BufferMapping
+	url = https://github.com/joyliu37/BufferMapping
     branch = master
 [submodule "coreir-apps"]
 	path = coreir-apps
-	url = ../../rdaly525/coreir.git
+	url = https://github.com/rdaly525/coreir
     branch = ubuffer
 [submodule "tapeout"]
 	path = tapeout
-	url = ../../stanfordaha/garnet.git
+	url = https://github.com/stanfordaha/garnet
     branch = tapeout
