--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,3 +23,15 @@ jobs:
         docker exec test pip freeze
         docker exec test aha garnet --width 4 --height 2 --verilog
         docker exec test test -e /aha/garnet/garnet.v
+    - name: Notify Owners
+      if: github.event_name == 'pull_request'
+      uses: actions/github-script@0.4.0
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          await github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Test!'
+            })
