--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -33,5 +33,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Test!'
+              body: 'Test!!'
             })
