--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,8 +2,8 @@ name: Docker Image CI
 
 on:
   push:
-    branches-ignore: 
-      - dependabot/**
+    branches: 
+      - master
   schedule:
     - cron: '0 11 * * 0'
 
