--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,7 +2,12 @@ name: Integration Tests
 
 on:
   push:
-    branches-ignore: 
+    branches:
+      - master
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches:
       - master
   schedule:
     - cron: '0 11 * * *'
