--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,7 +27,7 @@ jobs:
 #         docker exec test aha garnet --width 4 --height 2 --verilog
 #         docker exec test test -e /aha/garnet/garnet.v
     - name: Notify Owners
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' && failure()
       uses: actions/github-script@0.4.0
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
@@ -36,5 +36,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Test!!'
+              body: 'Oops.'
             })
