--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -28,6 +28,7 @@ jobs:
 #         docker exec test pip freeze
 #         docker exec test aha garnet --width 4 --height 2 --verilog
 #         docker exec test test -e /aha/garnet/garnet.v
+    - run: /bin/false
     - name: Notify Owners
       if: github.event_name == 'pull_request' && failure()
       uses: actions/github-script@0.4.0
