--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -40,7 +40,7 @@ jobs:
               repo: context.repo.repo,
               path: "OWNERS.yml"
             })
-          let temp = Buffer.from(result.data.content, result.data.encoding).toString()
+          let temp = JSON.parse(Buffer.from(result.data.content, result.data.encoding))
           console.log(temp)
           
           await github.issues.createComment({
