--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -56,7 +56,7 @@ jobs:
               assignees: owners[updated_repo]
             })
           
-          await github.issues.createReviewRequest({
+          await github.pulls.createReviewRequest({
               pull_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
