--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -18,8 +18,8 @@ steps:
   key: "integration-tests"
   depends_on: "docker-build"
   commands:
-  - echo $TEST1
-  - echo $TEST2
+  - echo $$TEST1
+  - echo $$TEST2
   - source /cad/modules/tcl/init/sh
   - module load base incisive
   - ls /aha
