--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -24,9 +24,9 @@ steps:
   - module load base incisive
   - ls /aha
   - aha garnet --width 16 --height 16 --verilog --interconnect-only
-  - aha halide conv_1_2
-  - aha map conv_1_2 --width 16 --height 16
-  - aha test conv_1_2
+  - aha halide tests/conv_1_2
+  - aha map tests/conv_1_2 --width 16 --height 16
+  - aha test tests/conv_1_2
   # We need to clean out the docker workdir because files in docker 
   # have root permissions, and the workdir is a mapped volume so
   # the next buildkite job in that directory will fail because it
