--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,7 +10,7 @@ steps:
   - echo "--- Creating garnet Image"
   - docker build . -t "garnet:$BUILDKITE_COMMIT"
   - echo "--- Pruning Docker Images"
-  - yes | docker image prune -a --filter "until=24h" --filter=label='description=garnet'
+  - yes | docker image prune -a --filter "until=6h" --filter=label='description=garnet'
   agents:
     docker: true
   
@@ -27,10 +27,10 @@ steps:
   - aha halide tests/conv_1_2
   - aha map tests/conv_1_2 --width 16 --height 16
   - aha test tests/conv_1_2
-  # We need to clean out the docker workdir because files in docker 
-  # have root permissions, and the workdir is a mapped volume so
-  # the next buildkite job in that directory will fail because it
-  # couldn't remove the existing files.
+  # We need to clean out the docker workdir because files in docker
+  # have root permissions, and the workdir is a mapped volume so the
+  # next buildkite job in that directory will fail because it couldn't
+  # remove the existing files.
   - rm -rf /aha/*
   plugins:
     - docker#v3.2.0:
@@ -43,8 +43,11 @@ steps:
   agents:
     docker: true
 
-# - label: "Delete Docker Image"
-#   depends_on: "integration-tests"
-#   commands:
-#   # --no-prune so it doesn't prune dangling images, we want to use them for the Docker cache.
-#   - docker image rm "garnet" --no-prune
+- label: ":skull_and_crossbones: Delete Docker Image"
+  depends_on: "integration-tests"
+  commands:
+  # '--no-prune' so it doesn't prune dangling images, we want to use
+  # them for the Docker cache.
+  - docker image rm "garnet:$BUILDKITE_COMMIT" --no-prune
+  agents:
+    docker: true
