--- a/patches/halide-to-hardware/Makefile.patch
+++ b/patches/halide-to-hardware/Makefile.patch
@@ -1,4 +1,4 @@
 182c182
 < CXX_WARNING_FLAGS = -Wall -Werror -Wno-unused-function -Wcast-qual -Wignored-qualifiers -Wno-comment -Wsign-compare
 ---
-> CXX_WARNING_FLAGS = -Wall -Werror -Wno-unused-function -Wcast-qual -Wignored-qualifiers -Wno-comment -Wsign-compare -Wno-maybe-uninitialized
+> CXX_WARNING_FLAGS = -Wall -Werror -Wno-unused-function -Wcast-qual -Wignored-qualifiers -Wno-comment -Wsign-compare -Wno-maybe-uninitialized -Wno-unknown-warning-option
