--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -20,11 +20,38 @@ steps:
   - echo "--- Generating Garnet"
   - aha garnet --width 16 --height 16 --verilog --interconnect-only
   - echo "--- Compiling App"
+  - aha halide tests/ushift
+  - aha halide tests/arith
+  - aha halide tests/absolute
+  - aha halide apps/pointwise
+  - aha halide tests/scomp
+  - aha halide tests/ucomp
+  - aha halide tests/uminmax
+  - aha halide tests/rom
   - aha halide tests/conv_1_2
+  - aha halide tests/conv_2_1
   - echo "--- Mapping App"
+  - aha map tests/ushift --width 16 --height 16
+  - aha map tests/arith --width 16 --height 16
+  - aha map tests/absolute --width 16 --height 16
+  - aha map apps/pointwise --width 16 --height 16
+  - aha map tests/scomp --width 16 --height 16
+  - aha map tests/ucomp --width 16 --height 16
+  - aha map tests/uminmax --width 16 --height 16
+  - aha map tests/rom --width 16 --height 16
   - aha map tests/conv_1_2 --width 16 --height 16
+  - aha map tests/conv_2_1 --width 16 --height 16
   - echo "--- Running Test"
+  - aha test tests/ushift
+  - aha test tests/arith
+  - aha test tests/absolute
+  - aha test apps/pointwise
+  - aha test tests/scomp
+  - aha test tests/ucomp
+  - aha test tests/uminmax
+  - aha test tests/rom
   - aha test tests/conv_1_2
+  - aha test tests/conv_2_1
   # We need to clean out the docker workdir because files in docker
   # have root permissions, and the workdir is a mapped volume so the
   # next buildkite job in that directory will fail because it couldn't
