--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,7 +3,7 @@ steps:
   key: "docker-build"
   commands:
   - echo "--- Handle PR"
-  - if [[ $FLOW_REPO ]]; then
+  - if [[ $$FLOW_REPO ]]; then
       cd $FLOW_REPO && git checkout $FLOW_HEAD_SHA $$ cd -
     fi
   - echo "--- Creating garnet Image"
