check out PR branch (#235)
* check out PR branch in buildkite

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,6 +2,10 @@ steps:
 - label: ":wrench: Build Docker Image"
   key: "docker-build"
   commands:
+  - echo "--- Handle PR"
+  - if [[ $$FLOW_REPO ]]; then
+      cd $FLOW_REPO && git checkout $FLOW_HEAD_SHA $$ cd - ;
+    fi
   - echo "--- Creating garnet Image"
   - docker build . -t "garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA"
   - echo "--- Pruning Docker Images"
