--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         docker run --name test --rm -it -d testing bash
         docker exec test pip freeze
+        docker exec test source /aha/bin/activate
         docker exec test aha garnet --width 4 --height 2 --verilog
         docker exec test test -e /aha/garnet/garnet.v
     - name: Notify Owners on Failure
