refactor wrapper scripts (#350)
* refactor wrapper script

* install modules inside their directory

* package all scripts into their own package

* uncomment modules

* dont cwd or pythonpath

* default to parent dir

* rename halide-to-hardware

* change deps to look in /aha

* run python in virtualenv

* run commands using bash

* source virtualenv

* import sys

* rename halide-to-hardware

* Update integration.yml

* match master for submodules

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         docker run --name test --rm -it -d testing bash
         docker exec test pip freeze
-        docker exec test aha garnet --width 4 --height 2 --verilog
+        docker exec test bash -c "source /aha/bin/activate && aha garnet --width 4 --height 2 --verilog"
         docker exec test test -e /aha/garnet/garnet.v
     - name: Notify Owners on Failure
       if: github.event_name == 'pull_request' && failure()
