--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -63,14 +63,15 @@ steps:
   # We report success to the aha-flow app by removing the .TEMP file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
-  - ls -al /buildkite
-  - rm -rf /buildkite/.TEMP
+  - ls -al /
+  # - ls -al /buildkite
+  # - rm -rf /buildkite/.TEMP
   plugins:
     - docker#v3.2.0:
         image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
         volumes:
           - "/cad/:/cad"
-          - "temp:/buildkite:rw"
+          # - "temp:/buildkite:rw"
         mount-checkout: false
         propagate-environment: true
         environment:
