--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -64,14 +64,14 @@ steps:
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
   - ls -al /
-  # - ls -al /buildkite
+  - ls -al /buildkite
   # - rm -rf /buildkite/.TEMP
   plugins:
     - docker#v3.2.0:
         image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
         volumes:
           - "/cad/:/cad"
-          # - "temp:/buildkite:rw"
+          - "`(pwd)`/temp:/buildkite:rw"
         mount-checkout: false
         propagate-environment: true
         environment:
